--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -20,7 +20,7 @@
     width: 50px;
     height: 50px;
     margin-right: 20px;
-    border-radius: 20%; /* Hace la imagen redonda */
+    border-radius: 20%;
     object-fit: cover;
 }
 
@@ -30,13 +30,14 @@
     color: #3C43F9;
 }
 
-.search-input input {
+.search-input {
     display: flex;
     align-items: center;
-    border: 1px solid #ccc;
-    padding: 8px;
-    border-radius: 5px;
-    width: 400px;
+}
+
+.search-input i {
+    margin-right: 1rem;
+    color: #3C43F9;
 }
 
 .search-input input {
@@ -50,5 +51,5 @@
 }
 
 .search-input input:focus {
-    border: 2px solid #3C43F9; /* Borde azul al hacer clic */
+    border: 2px solid #3C43F9;
 }
