--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+p {
+    margin: 0;
+}
+
 /* CSS del header */
 .header-container {
     display: flex;
@@ -63,7 +67,7 @@
     margin: 100px auto;
 }
 
-.btn-new-product {
+.btn-new-item {
     color: #FFF;
     background-color:#3C43F9 ;
     padding: 10px 20px;
@@ -72,7 +76,7 @@
     font-size: 16px;
 }
 
-.btn-new-product:hover {
+.btn-new-item:hover {
     background-color: #007bff;
     color: white;
 }
@@ -87,58 +91,64 @@
     font-size: 18px;
 }
 
+.table-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 /* CSS de la tarjeta item */
-.container {
-    width: 60%;
-    margin: 0 auto;
+.container-card {
+    width: 100%;
+    align-items: center;
     display: flex;
     border: 2px solid;
-    padding: 10px;
     border-radius: 20px;
+    justify-content: space-between;
+    padding: 10px 20px;
 }
 
-.container img {
-    margin-left: 50px;
-    width: 150px;
-    height: 150px;
-    margin-right: 30px;
+.item-image {
+    width: 80px;
+    margin: 10px;
+    border-radius: 20px;
+    object-fit: cover;
 }
 
-.container .product-desc {
-    margin-right: 100px;
-}
-.container .product-desc h3 {
-    margin-bottom: 60px;
+.img-info-div {
+    display: flex;
+    align-items: center;
 }
 
-.container .product-desc p {
-    font-size: 18px;
+.item-image.no-image {
+    border: 2px solid #3C43F9;
 }
 
-.container .creation-date {
-    margin-right: 5%;
-    margin-top: 50px;
+.container-card .item-desc {
+    margin: 0 10px;
+}
+.container-card .item-desc h3 {
+    font-size: 20px;
 }
 
-.container .modification-date {
-    margin-right: 5%;
-    margin-top: 50px;
+.container-card .item-desc {
+    font-size: 16px;
+    width: 700px;
 }
 
-.container .button button {
-    margin-right: 5%;
-    margin-top: 55px;
+.container-card .button button {
     color: #FFF;
-    background-color:#3C43F9 ;
-    width: 200px;
-    height: 50px;
+    background-color:#f93c3c ;
+    width: fit-content;
+    padding: 5px 10px;
     border: none;
     border-radius: 10px;
+    margin-right: 20px;
 }
 
-.container .button button:hover { 
+.container-card .button button:hover { 
     color: #FFF;
-    background-color:#0006be ;
+    background-color:#be0000 ;
 }
 
 /* CSS del modal */
