Eliminar margen inferior del input
Para que quede alineado con el icono de busqueda

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -53,6 +53,7 @@ p {
     border-radius: 5px;
     width: 400px;
     outline: none; /* Elimina el borde de enfoque predeterminado del navegador */
+    margin-bottom: 0px; /* Elimina el margen inferior del input */
 }
 
 .search-input input:focus {
