--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -71,6 +71,11 @@ p {
     padding: 20px;
 }
 
+.btn-and-search-div {
+    display: flex;
+    justify-content: space-between;
+}
+
 .btn-new-item {
     color: #FFF;
     background-color:#3C43F9 ;
@@ -207,4 +212,38 @@ textarea {
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
+}
+
+/* CSS de item no encontrado */
+.no-items-message {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+.no-items-icon {
+    font-size: 3rem;
+    margin-bottom: 10px;
+}
+
+.no-items-text {
+    text-align: center;
+}
+
+.no-items-text h3 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.no-items-text p {
+    font-size: 1rem;
+    text-align: center;
 }
